# rusty-macaroon

./: Cargo.toml  README.md
examples/: first_party.rs  third_party.rs
src/: lib.rs
src/macaroon/: mod.rs
src/verifier/: mod.rs
