[package]
name = "rusty-macaroon"
version = "0.1.0"
authors = ["Taylor Thomas <taylor.thomas@microsoft.com>"]
edition = "2018"

[lib]
name = "macaroon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version= "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.6"
failure = "0.1"
base64 = "0.10"
sodiumoxide = "0.2"

[dev-dependencies]
chrono = "0.4"
